crates/mlcg_builtin_macros/tests/ui/fail_invalid_manifest.stderr
error: failed to parse manifest `tests/invalid_manifest.toml`
 --> tests/ui/fail_invalid_manifest.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/invalid_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
