crates/mlcg_builtin_macros/tests/ui/fail_invalid_manifest.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/invalid_manifest.toml");
}

fn main() {}
